--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -190,17 +190,10 @@ service wcnss-service /system/vendor/bin/wcnss_service
     oneshot
 
 service ppd /system/vendor/bin/mm-pp-daemon
-    class late_start
-    disabled
+    class hal
     user system
     socket pps stream 0660 system system
     group system graphics
-
-on property:init.svc.surfaceflinger=stopped
-    stop ppd
-
-on property:init.svc.surfaceflinger=running
-    start ppd
 
 # workaround for color service issue
 on property:init.svc.surfaceflinger=restarting
