s2: Move qcamerasvr to main and restart on service restarts
 * Move qcamerasvr to main to it restarts on decryption
 * Also trigger a qcamerasvr restart when media or all services restart,
   since it needs to be properly restarted with cameraservice

Change-Id: I2361c5658359ed9f2fe937a0bd3329ca9c00e66e

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -150,10 +150,16 @@ mkdir /data/vendor/camera 0770 camera camera
 
 # start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
-    class late_start
+    class main
     user camera
     group camera system inet input graphics
     writepid /dev/cpuset/camera-daemon/tasks
+
+on property:init.svc.media=restarting
+    restart qcamerasvr
+
+on property:init.svc.servicemanager=restarting
+    restart qcamerasvr
 
 on init
    write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
