--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -52,6 +52,10 @@ on init
     write /sys/block/zram0/comp_algorithm lz4
     write /proc/sys/vm/page-cluster 0
 
+    # qseecomd needs /dev/block/bootdevice
+    # vold needs keymaster that needs qseecomd
+    start qseecomd
+
 on post-fs
     chmod 0755 /sys/kernel/debug/tracing
     # Allow writing to the kernel trace log.
@@ -185,7 +189,8 @@ on boot
     mkdir /persist/vpp 0770 media media
 
 on post-fs
-    start qseecomd
+    # Wait qseecomd started
+    wait_for_prop sys.listeners.registered true
 
 # msm specific files that need to be created on /data
 on post-fs-data
