--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -195,7 +195,7 @@ on boot
     write /proc/sys/kernel/sched_boost 1
 
 service wcnss-service /system/vendor/bin/wcnss_service
-    class main
+    class late_start
     user system
     group system wifi radio
     oneshot
