--- a/configs/thermal-engine-srtphone.conf
+++ b/configs/thermal-engine-srtphone.conf
@@ -1,194 +1,160 @@
-# SENSOR : ALIAS
-# tsens_tz_sensor4 : cpu4
-# tsens_tz_sensor2 : pop_mem
-# tsens_tz_sensor10 : gpu
-# tsens_tz_sensor9 : cpu0-cpu1-cpu2-cpu3
-# tsens_tz_sensor8 : L2_cache_1
-# tsens_tz_sensor7 : cpu7
-# tsens_tz_sensor6 : cpu6
-# tsens_tz_sensor5 : cpu5
+sampling         5000
 
-# debug
-#Conf file: /system/etc/thermal-engine-srtphone.conf
+#debug
 
-[SS-POPMEM]
+[CPU0-7_MONITOR]
+algo_type monitor
+override 10000
+sampling 5000
+sensor xo_therm
+thresholds 38000 40000 42000 46000 50000
+thresholds_clr 36000 38000 40000 42000 46000
+actions cluster1+cluster0 cluster1+cluster0 cluster1+cluster0 cluster1+cluster0 cluster1+cluster0
+action_info 1612800+1401600 1305600+1017600 1113600+806400 998400+806400 883200+806400
+
+[GPU_MONITOR]
+algo_type monitor
+override 10000
+sampling 5000
+sensor xo_therm
+thresholds 37000 39000 41000 50000
+thresholds_clr 35000 37000 39000 46000
+actions gpu gpu gpu gpu
+action_info 550000000 480000000 432000000 300000000
+
+[LCD_MONITOR]
+algo_type monitor
+sampling 5000
+sensor xo_therm
+thresholds 37000 39000 41000 43000 50000
+thresholds_clr 35000 37000 39000 41000 45000
+actions lcd lcd lcd lcd lcd
+action_info 3890 3685 3480 3276 3000
+
+[SS-GPU-SKIN]
 #algo_type ss
-sampling 250
-sensor pop_mem
+override 10000
+sampling 100000
+sensor xo_therm
+device gpu
+set_point 46000
+set_point_clr 40000
+time_constant 0
+device_max_limit 432000000
+
+[SS-SKIN_CONTROL_POWER]
+#algo_type ss
+override 10000
+sampling 100000
+sensor xo_therm
+device cluster0
+set_point 46000
+set_point_clr 40000
+time_constant 0
+device_max_limit 1017600
+
+[SS-SKIN_CONTROL_PERF]
+#algo_type ss
+override 10000
+sampling 100000
+sensor xo_therm
 device cluster1
-set_point 70000
-set_point_clr 55000
-time_constant 2
+set_point 44000
+set_point_clr 40000
+time_constant 0
+device_max_limit 1190400
 
 [SS-L2_CACHE_1]
 #algo_type ss
+override 10000
 sampling 50
 sensor L2_cache_1
 device cluster1
-set_point 85000
+set_point 90000
 set_point_clr 55000
 time_constant 0
+device_max_limit 1190400
 
 [SS-CPU7]
 #algo_type ss
+override 10000
 sampling 50
-sensor cpu7
+sensor tsens_tz_sensor7
 device cluster1
-set_point 85000
+set_point 90000
 set_point_clr 55000
 time_constant 0
+device_max_limit 1190400
 
 [SS-CPU6]
 #algo_type ss
+override 10000
 sampling 50
-sensor cpu6
+sensor tsens_tz_sensor6
 device cluster1
-set_point 85000
+set_point 90000
 set_point_clr 55000
 time_constant 0
+device_max_limit 1190400
 
 [SS-CPU5]
 #algo_type ss
+override 10000
 sampling 50
-sensor cpu5
+sensor tsens_tz_sensor5
 device cluster1
-set_point 85000
+set_point 90000
 set_point_clr 55000
 time_constant 0
+device_max_limit 1190400
 
 [SS-CPU4]
 #algo_type ss
+override 10000
 sampling 50
-sensor cpu4
+sensor tsens_tz_sensor4
 device cluster1
-set_point 85000
+set_point 90000
 set_point_clr 55000
 time_constant 0
+device_max_limit 1190400
 
 [SS-CPU0-1-2-3]
 #algo_type ss
+override 10000
 sampling 50
-sensor cpu0-1-2-3
+sensor tsens_tz_sensor9
 device cluster0
-set_point 85000
+set_point 90000
 set_point_clr 55000
 time_constant 0
+device_max_limit 1017600
 
 [SPEAKER-CAL]
 sampling 30000 30000 10 1800000
+override 10000
 sensor pm8950_tz
 sensors tsens_tz_sensor1 tsens_tz_sensor2 tsens_tz_sensor3 tsens_tz_sensor10
 temp_range 6000 10000 2000
 max_temp 45000
 offset -4000
 
-[VDD_RSTR_MONITOR-TSENS10]
+[CPU5_CPU6_CPU7_HOTPLUG_SKIN]
 #algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor10
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
+override 10000
+sampling 5000
+sensor xo_therm
+thresholds 39000 41000
+thresholds_clr 37000 39000
+actions hotplug_5+hotplug_6+hotplug_7 hotplug_5+hotplug_6+hotplug_7
+action_info 1+1+0 1+1+1
 
-[VDD_RSTR_MONITOR-TSENS9]
+[L2_CACHE_CPU5_HOTPLUG_MONITOR]
 #algo_type monitor
+override 10000
 sampling 1000
-sensor tsens_tz_sensor9
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
+sensor L2_cache_1
+thresholds 95000
+thresholds_clr 90000
+actions hotplug_5
 action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS8]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor8
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS7]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor7
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS6]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor6
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS5]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor5
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS4]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor4
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS3]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor3
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS2]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor2
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS1]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor1
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS0]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor0
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
